--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,107 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* width */
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background-color: #0a192f;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #013f3c7f;
+    border-radius: 10px;
+}
+
+
+i {
+    cursor: pointer;
+}
+
+i:hover {
+    color: #f5f5f5;
+}
+
+
+/* loader animation */
+
+.k {
+    animation: k 1s infinite;
+}
+
+@keyframes k {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 0.5;
+    }
+}
+
+
+.s {
+    animation: s 1s infinite;
+}
+
+@keyframes s {
+    0% {
+        opacity: 0.5;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0.5;
+    }
+}
+
+
+.r {
+    animation: r 1s infinite;
+}
+
+@keyframes r {
+    0% {
+        opacity: 0.5;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+/* input */
+
+input,
+textarea {
+    height: 40px;
+    border: 1px solid gray;
+    width: 100%;
+    padding-left: 20px;
+}
+
+input:focus {
+    outline: none;
+    border: 2px solid rgb(56, 56, 56);
+}
+
+textarea {
+    height: 100px;
+    padding-top: 10px;
+}
