--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+.header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
 .header p {
     margin: 0 !important;
     padding: 0 !important;
